actually fixed header positioning--no more overlap

--- a/design-practice/main.css
+++ b/design-practice/main.css
@@ -41,8 +41,7 @@ body {
   font-weight: 300;
   color: var(--primary-colour);
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  width: 100%;
   text-align: center;
   border-top: 1px solid var(--primary-colour);
 }
